k8s/webapp/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
  type: LoadBalancer    # ou ClusterIP + Ingress selon ton cluster
