k8s/webapp/wordpress/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: wordpress.local    # <-- Mets ton vrai domaine ici
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - wordpress.local       # <-- idem domaine
      secretName: wordpress-tls # secret TLS (cert-manager ou manuel)
